continued learning how to use compose, finished with the animation ting and tried out a news item view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,7 @@ dependencies {
     implementation("androidx.compose.runtime:runtime-livedata:1.0.5")
     implementation("androidx.compose.runtime:runtime-rxjava2:1.0.5")
 
+    implementation("androidx.compose.runtime:runtime:$compose_version")
+
 
 }
