feature: started learning how to use different layouts e.g. row, columns, and boxes, surface

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningCompose">
         <activity
+            android:name=".ui.layouts.LayoutsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_layouts"
+            android:theme="@style/Theme.LearningCompose.NoActionBar" />
+        <activity
             android:name=".ui.components.Home"
             android:exported="true"
             android:label="@string/title_activity_home"
             android:theme="@style/Theme.LearningCompose.NoActionBar">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".MainActivity"
