--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation("androidx.compose.material:material-icons-extended:1.0.5")
     implementation("androidx.compose.runtime:runtime-livedata:1.0.5")
     implementation("androidx.compose.runtime:runtime-rxjava2:1.0.5")
+    implementation("androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01")
 
     implementation("androidx.compose.runtime:runtime:$compose_version")
 
