--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningCompose">
         <activity
+            android:name=".ui.layouts.LayoutsCodelabActivity"
+            android:exported="false"
+            android:label="@string/title_activity_layouts_codelab"
+            android:theme="@style/Theme.LearningCompose.NoActionBar" />
+        <activity
             android:name=".ui.layouts.LayoutsActivity"
             android:exported="false"
             android:label="@string/title_activity_layouts"
