--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation("androidx.compose.runtime:runtime-rxjava2:1.0.5")
     implementation("androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01")
 
+    implementation 'io.coil-kt:coil-compose:1.4.0'
+
     implementation("androidx.compose.runtime:runtime:$compose_version")
 
 
