--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningCompose">
         <activity
+            android:name=".ui.layouts.ConstraintLayoutActivity"
+            android:exported="false"
+            android:label="@string/title_activity_constraint_layout"
+            android:theme="@style/Theme.LearningCompose.NoActionBar" />
+        <activity
+            android:name=".ui.layouts.CustomLayoutsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_custom_layouts"
+            android:theme="@style/Theme.LearningCompose.NoActionBar" />
+        <activity
             android:name=".ui.layouts.LayoutsListActivity"
             android:exported="false"
             android:label="@string/title_activity_layouts_list"
