--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LearningCompose">
         <activity
+            android:name=".ui.state.StateActivity"
+            android:exported="false"
+            android:label="@string/title_activity_state"
+            android:theme="@style/Theme.LearningCompose.NoActionBar"/>
+        <activity
+            android:name=".ui.state.todo.TodoActivity"
+            android:exported="true"
+            android:label="@string/title_activity_todo"
+            android:theme="@style/Theme.LearningCompose.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.layouts.ConstraintLayoutActivity"
             android:exported="false"
             android:label="@string/title_activity_constraint_layout"
